# better-google-cloud-secret-manager-backend

./: pyproject.toml
.github/workflows/: publish.yml
better-google-cloud-secret-manager-backend/: __init__.py
