[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "better_google_cloud_secret_manager_backend"
version = "0.0.6"
description = "A brief description of your project"
authors = [
    { name = "Lucas Arruda" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "apache-airflow[gcp]",
]

[tool.setuptools]
packages = ["better-google-cloud-secret-manager-backend"]